# timedeque

./: LICENSE  README.md  pyproject.toml  timedeque.py
src/: timedeque.py
tests/: test_timedeque.py
